--- a/frontend/notes-app/src/index.css
+++ b/frontend/notes-app/src/index.css
@@ -22,4 +22,10 @@
   .btn-primary {
     @apply w-full text-sm bg-primary p-2 text-white rounded my-1 hover:bg-blue-600;
   }
+  .icon-btn {
+    @apply text-xl text-slate-300 cursor-pointer hover:text-primary;
+  }
+  .input-label {
+    @apply text-xs text-slate-400;
+  }
 }
